--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <input type="password" id="password" class="emailandpassword" placeholder="Set A Password*" name="password" required maxlength="20" pattern="(?=.*[@$!%*?&])(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}">
         </div>
         <div class="register">
-            <input type="submit" class="rgstrbutton" onclick="validate(this.form)" value="Get Started">
+            <input type="submit" class="rgstrbutton" value="Get Started">
         </div>
     </div>
 </div></form>
