--- a/index.html
+++ b/index.html
@@ -6,34 +6,34 @@
 <!--<link rel="stylesheet" type="text/css" href="Styles.css">-->
 </head>
 <body>
-<form method="post" name="form" action="signup.php"><div class="box">
+<div class="box">
     <div class="gridbox">
-        <div>
-            <input type="button" class="loginbutton" id="signup" value="Sign Up">
-        </div>
-        <div>
-            <input type="button" class="loginbutton" id="login" value="Log In">
-        </div>
+        <form method="get" action="signup.php" class="firstrow">
+            <div class="buttons">
+                <input type="submit" name="signup" value="Sign Up" class="loginbutton">
+                <input type="submit" name="login" value="Log In" class="loginbutton">
+            </div>
+        </form>
+        <form method="post" name="form" action="signup.php" class="otherrows">
         <div class="text">
-            <p>Sign up for free</p>
+            <a>Sign up for free</a>
         </div>
-        <div>
-            <input type="text" id="firstname" placeholder="First Name*" name="firstname" pattern="[A-Z]{1}[a-z]{1,19}" required>
+        <div class="namefields">
+                <input type="text" id="firstname" placeholder="First Name*" name="firstname" pattern="[A-Z]{1}[a-z]{1,19}" required>
+                <input type="text" id="lastname" placeholder="Last Name*" name="lastname" pattern="[A-Z]{1}[a-z]{1,19}"  required>
         </div>
-        <div>
-            <input type="text" id="lastname" placeholder="Last Name*" name="lastname" pattern="[A-Z]{1}[a-z]{1,19}"  required>
+        <div class="namefields">
+            <input type="email" placeholder="Email Address*" class="emailandpassword" name="email" id="email" required minlength="5">
         </div>
-        <div class="email">
-            <input type="email" id="email" class="emailandpassword" placeholder="Email Address*" name="email" required minlength="5">
-        </div>
-        <div class="password">
-            <input type="password" id="password" class="emailandpassword" placeholder="Set A Password*" name="password" required maxlength="20" pattern="(?=.*[@$!%*?&])(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}">
+        <div class="namefields">
+            <input type="password" placeholder="Set A Password*" name="password" class="emailandpassword" id="password" required maxlength="20" pattern="(?=.*[@$!%*?&])(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}">
         </div>
         <div class="register">
-            <input type="submit" class="rgstrbutton" value="Get Started">
+            <input type="submit" class="rgstrbutton" value="Get Started" name="register">
         </div>
+        </form>
     </div>
-</div></form>
+</div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
 <script src="js"></script>
 <script src="jquery"></script>
