dodelat email cheker

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <input type="email" placeholder="Email Address*" class="emailandpassword" name="email" id="email" required minlength="5">
         </div>
         <div class="namefields">
-            <input type="password" placeholder="Set A Password*" name="password" class="emailandpassword" id="password" required maxlength="20" pattern="(?=.*[@$!%*?&])(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}">
+            <input type="password" placeholder="Password*" name="password" class="emailandpassword" id="password" required maxlength="20" pattern="(?=.*[@$!%*?&])(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}">
         </div>
         <div class="register">
             <input type="submit" class="rgstrbutton" value="Get Started" name="register">
