--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
                 <input type="email" placeholder="Email Address*" class="emailandpassword" name="email" id="email" required minlength="5">
             </div>
             <div class="namefields">
-                <input type="password" placeholder="Set A Password*" name="password" class="emailandpassword" id="password" required maxlength="20">
+                <input type="password" placeholder="Password*" name="password" class="emailandpassword" id="password" required maxlength="20">
             </div>
             <div>
                <span></span>
