--- a/html/Welcome.html
+++ b/html/Welcome.html
@@ -6,7 +6,7 @@
     <!--<link rel="stylesheet" type="text/css" href="Styles.css">-->
 </head>
 <body>
-<form method="get" action="logout.php">
+<form method="get" action="/src/php/logout.php">
     <input type="submit" name="logout" value="Log out">
 </form>
 </body>
