--- a/html/login.html
+++ b/html/login.html
@@ -8,13 +8,13 @@
 <body>
 <div class="box">
     <div class="gridbox">
-        <form method="get" action="login.php" class="firstrow">
+        <form method="get" action="/src/php/login.php" class="firstrow">
             <div class="buttons">
                 <input type="submit" name="signup" value="Sign Up" class="loginbutton">
                 <input type="submit" name="login" value="Log In" class="loginbutton">
             </div>
         </form>
-        <form method="post" name="form" action="login.php" class="otherrows">
+        <form method="post" name="form" action="/src/php/login.php" class="otherrows">
             <div class="text">
                 <a>Log into your account here</a>
             </div>
@@ -34,7 +34,7 @@
     </div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-<script src="js"></script>
-<script src="jquery"></script>
+<script src="/home/drupal/javascript/js"></script>
+<script src="/home/drupal/javascript/jquery"></script>
 </body>
 </html>
