--- a/html/login.html
+++ b/html/login.html
@@ -1,40 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title></title>
-    <!--<link rel="stylesheet" type="text/css" href="Styles.css">-->
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Log In</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <link rel="stylesheet" href="/css/styles.css">
+    <style>
+        .centered-form__form {width: 472.45px}
+    </style>
 </head>
-<body>
-<div class="box">
-    <div class="gridbox">
-        <form method="get" action="/src/php/login.php" class="firstrow">
-            <div class="buttons">
-                <input type="submit" name="signup" value="Sign Up" class="loginbutton">
-                <input type="submit" name="login" value="Log In" class="loginbutton">
+
+<body class="centered-form">
+    <div class="centered-form__form">
+
+        <div class="form-field">
+            <button type="button" class="reg_btn" id="signup_btn" onclick="window.location.href='/webbasis/signup.html'">Sign Up</button>
+            <button type="button" class="reg_btn" id="login_btn">Log In</button>
+        </div>
+
+        <form name="signup" method="POST" action="login.php">
+            <br>
+            <div class="form-field">
+                <p>Log In</p>
             </div>
-        </form>
-        <form method="post" name="form" action="/src/php/login.php" class="otherrows">
-            <div class="text">
-                <a>Log into your account here</a>
+            <br>
+
+            <div class="form-field">
+                <input type="email" name="email" id="input_email" placeholder="Email Address*" required maxlength=30 />
             </div>
-            <div class="namefields">
-                <input type="email" placeholder="Email Address*" class="emailandpassword" name="email" id="email" required minlength="5">
+
+            <div class="form-field">
+                <input placeholder="Set A Password*" name="password" type="password" id="input_password" pattern="(?=.*[@$!%*?&])(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,20}" required />
             </div>
-            <div class="namefields">
-                <input type="password" placeholder="Password*" name="password" class="emailandpassword" id="password" required maxlength="20">
+            <br>
+            <div class="form-field">
+                <button type="submit" class="submit_btn">LOG IN</button>
             </div>
-            <div>
-               <span></span>
-            </div>
-            <div class="register">
-                <input type="submit" class="rgstrbutton" value="Log In" name="login">
-            </div>
+
         </form>
     </div>
-</div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-<script src="/home/drupal/javascript/js"></script>
-<script src="/home/drupal/javascript/jquery"></script>
+
+    <script src="/javascripts/jquery-3.4.0.min.js"></script>
+    <script src="/javascripts/login.js"></script>
 </body>
 </html>
+
