--- a/html/login.html
+++ b/html/login.html
@@ -15,11 +15,11 @@
     <div class="centered-form__form">
 
         <div class="form-field">
-            <button type="button" class="reg_btn" id="signup_btn" onclick="window.location.href='/webbasis/signup.html'">Sign Up</button>
+            <button type="button" class="reg_btn" id="signup_btn" onclick="window.location.href='/index.php'">Sign Up</button>
             <button type="button" class="reg_btn" id="login_btn">Log In</button>
         </div>
 
-        <form name="signup" method="POST" action="login.php">
+        <form name="signup" method="POST" action="login">
             <br>
             <div class="form-field">
                 <p>Log In</p>
