--- a/html/Welcome.html
+++ b/html/Welcome.html
@@ -6,8 +6,8 @@
     <!--<link rel="stylesheet" type="text/css" href="Styles.css">-->
 </head>
 <body>
-<form method="get" action="/src/php/logout.php">
-    <input type="submit" name="logout" value="Log out">
+<form method="post" action="logout">
+    <input type="submit" value="Log out">
 </form>
 </body>
 </html>
